maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:21: error: ';' expected but ',' found.
      c,b=garM(c,b)
       ^Escaper:25: error: ';' expected but '=' found.
    (c,b)=garM(c,b)
         ^